# ZinoEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  setup.bat  update_deps.bat
assets/: MISSING_normal.tga  abc.mtl  (+5 more)
src/engine/: CMakeLists.txt
src/engine/application/: CMakeLists.txt
src/engine/application/private/engine/application/: application_module.cpp
src/engine/application/private/engine/application/windows/: application.cpp  window.cpp
src/engine/application/public/engine/application/: application_module.hpp  cursor.hpp  message_handler.hpp  platform_application.hpp  platform_window.hpp
src/engine/application/public/engine/application/windows/: application.hpp  cursor.hpp  window.hpp
src/engine/core/: CMakeLists.txt
src/engine/core/private/engine/hal/windows/: library.cpp  thread.cpp
src/engine/core/private/engine/logger/: logger.cpp
src/engine/core/private/engine/logger/sinks/: stdout_sink.cpp
src/engine/core/private/engine/module/: module.cpp  module_manager.cpp
src/engine/core/public/: core.natvis
src/engine/core/public/engine/: core.hpp  flags.hpp  hash.hpp  multicast_delegate.hpp  platform_macros.hpp  random.hpp  result.hpp  unused_parameters.hpp
src/engine/core/public/engine/containers/: sparse_array.hpp
src/engine/core/public/engine/debug/: assertions.hpp
src/engine/core/public/engine/hal/: library.hpp  thread.hpp
src/engine/core/public/engine/hal/windows/: library.hpp  thread.hpp
src/engine/core/public/engine/logger/: logger.hpp  sink.hpp
src/engine/core/public/engine/logger/sinks/: stdout_sink.hpp
src/engine/core/public/engine/module/: module.hpp  module_manager.hpp
src/engine/core/public/engine/util/: simple_pool.hpp
src/engine/engine/: CMakeLists.txt
src/engine/engine/private/engine/: engine.cpp
src/engine/engine/public/engine/: engine.hpp
src/engine/filesystem/: CMakeLists.txt
src/engine/filesystem/private/engine/filesystem/: filesystem.cpp  filesystem_module.cpp  std_mount_point.cpp
src/engine/filesystem/public/engine/filesystem/: filesystem.hpp  filesystem_module.hpp  mount_point.hpp  std_mount_point.hpp
src/engine/gfx/: CMakeLists.txt
src/engine/gfx/private/engine/gfx/: command_list.cpp  device.cpp  threaded_command_pool.cpp  window.cpp
src/engine/gfx/public/engine/gfx/: backend.hpp  backend_device.hpp  buffer.hpp  command.hpp  compute_pipeline.hpp  device.hpp  device_resource.hpp  format.hpp  gfx_pipeline.hpp  gfx_result.hpp  memory.hpp  pipeline.hpp  pipeline_layout.hpp  rect.hpp  render_pass.hpp  sampler.hpp  shader.hpp  shader_format.hpp  swapchain.hpp  sync.hpp  texture.hpp  uniform_buffer.hpp  window.hpp
src/engine/gfxutils/: CMakeLists.txt
src/engine/gfxutils/imgui/: CMakeLists.txt
src/engine/gfxutils/imgui/private/engine/imgui/: imgui.cpp
src/engine/gfxutils/imgui/public/engine/imgui/: imgui.hpp
src/engine/gfxutils/private/engine/gfx/utils/: fullscreen_quad.cpp  gfx_utils_module.cpp  mipmap_generation.cpp  scatter_upload_buffer.cpp
src/engine/gfxutils/public/engine/gfx/utils/: fullscreen_quad.hpp  gfx_utils_module.hpp  mipmap_generation.hpp  scatter_upload_buffer.hpp
src/engine/imgui/: CMakeLists.txt
src/engine/imgui/private/engine/imgui/: imgui.cpp
src/engine/imgui/public/engine/imgui/: imgui.hpp
src/engine/jobsystem/: CMakeLists.txt
src/engine/jobsystem/private/engine/jobsystem/: job.cpp  jobsystem.cpp  worker_thread.cpp
src/engine/jobsystem/public/engine/jobsystem/: job.hpp  job_group.hpp  jobsystem.hpp  worker_thread.hpp
src/engine/materialsystem/: CMakeLists.txt
src/engine/materialsystem/private/engine/materialsystem/: material.cpp  material_compiler.cpp
src/engine/materialsystem/public/engine/materialsystem/: material.hpp  material_compiler.hpp
src/engine/renderer/: CMakeLists.txt
src/engine/renderer/private/engine/renderer/: RenderNode.cpp  RenderPass.cpp  World.cpp  render_node.cpp  render_pass.cpp
src/engine/renderer/public/engine/renderer/: Drawcall.hpp  Material.hpp  RenderNode.hpp  RenderPass.hpp  World.hpp  render_node.hpp  render_pass.hpp
src/engine/rendergraph/: CMakeLists.txt
src/engine/rendergraph/private/engine/gfx/rendergraph/: render_graph.cpp  render_pass.cpp  resource_registry.cpp
src/engine/shadercompiler/: CMakeLists.txt
src/engine/shadercompiler/private/engine/shadercompiler/: shader_compiler.cpp
src/engine/shadercompiler/public/engine/shadercompiler/: shader_compiler.hpp  shader_compiler_module.hpp
src/engine/shadersystem/: CMakeLists.txt
src/engine/shadersystem/private/engine/shadersystem/: shader.cpp  shader_declaration.cpp  shader_instance.cpp  shader_manager.cpp  shader_permutation.cpp  shaderbuilder.cpp  shaderbuilder.hpp  zeshader_compiler.cpp  zeshader_compiler.hpp
src/engine/shadersystem/public/engine/shadersystem/: shader.hpp  shader_declaration.hpp  shader_manager.hpp  shader_permutation_id.hpp
src/engine/test/: CMakeLists.txt
src/engine/test/core/: CMakeLists.txt  sparse_array.cpp
src/engine/vulkangfx/: CMakeLists.txt
src/engine/vulkangfx/private/engine/gfx/: vulkan.hpp  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_backend_module.cpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_list.hpp  vulkan_command_pool.hpp  vulkan_descriptor_manager.cpp  vulkan_descriptor_manager.hpp  vulkan_descriptor_set.cpp  vulkan_descriptor_set.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_memory_allocator.cpp  vulkan_pipeline.hpp  vulkan_pipeline_layout.cpp  vulkan_pipeline_layout.hpp  vulkan_renderpass.hpp  vulkan_sampler.hpp  vulkan_shader.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_sync.hpp  vulkan_texture.hpp  vulkan_texture_view.hpp
src/engine/vulkangfx/public/engine/gfx/: vulkan_backend_module.hpp
src/engine/vulkanshadercompiler/: CMakeLists.txt
src/engine/vulkanshadercompiler/private/: vulkan_shader_compiler.cpp
src/engine/zesl/: CMakeLists.txt
src/engine/zesl/private/engine/zesl/: parser.cpp  parser.hpp  token.cpp  token.hpp  zesl.cpp
src/engine/zesl/public/engine/zesl/: parameter.hpp  zesl.hpp
src/game/main/: CMakeLists.txt  Main.cpp
(+37 files in other folders)
